examples/errors/name_resolution/E0203_unknown_field.hd
struct Point {
    x: int,
    y: int
}

fn main(): void {
    let p = Point { x: 10, y: 20 };
    let z = p.z;
    return;
}
